--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
-    <string name="app_name">AppEjercitacion001</string>
+    <string name="app_name">App - Ingreso de Datos</string>
     <string name="text_name">Nombre:</string>
     <string name="text_lastname">Apellido:</string>
     <string name="text_age">Edad:</string>
     <string name="text_button">Enviar</string>
     <string name="text_out"> </string>
-    <string name="text_out_name">"Nombre Ingresado:"</string>
-    <string name="text_out_lastname">"Apellido Ingresado:"</string>
-    <string name="text_out_age">"Edad Ingresada:"</string>
+    <string name="text_out_name">Nombre Ingresado:</string>
+    <string name="text_out_lastname">Apellido Ingresado:</string>
+    <string name="text_out_age">Edad Ingresada:</string>
 
 </resources>
